--- a/src/base/templates/base.html
+++ b/src/base/templates/base.html
@@ -5,7 +5,7 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <header></header>
+    <header>{% include 'includes/navbar.html' %}</header>
     <main>{% block content %}{% endblock %}</main>
     <footer></footer>
 </body>
