Add navbar item of product list.

--- a/src/base/templates/includes/navbar.html
+++ b/src/base/templates/includes/navbar.html
@@ -2,5 +2,6 @@
   <ul>
     <li><a name="brand" href="{% url 'home' %}">BRAND</a></li>
     <li><a name="home" href="{% url 'home' %}">Home</a></li>
+    <li><a name="product_list" href="{% url 'products:list' %}">Products</a></li>
   </ul>
 </nav>
