--- a/src/products/templates/products/list.html
+++ b/src/products/templates/products/list.html
@@ -14,6 +14,11 @@
             </a>
             <a name="name_link" href="{% url 'products:detail' product.slug %}">{{ product.name }}</a>
             <h3>Price: {{ product.price }} UAH</h3>
+                {% if product.slug in request.session.cart.keys %}
+                    <a name="added_to_cart" href="#">Added to cart</a>
+                {% else %}
+                    <a name="buy" href="{% url 'carts:cart_add' product.slug %}">Buy</a>
+                {% endif %}
         </div>
     {% endfor %}
 </div>
