Fix url for Make order

--- a/src/carts/templates/carts/cart.html
+++ b/src/carts/templates/carts/cart.html
@@ -7,6 +7,6 @@
     {% empty %}
         <h3>You added nothing here yet</h3>
     {% endfor %}
-    <a name="make_order" href="{% url 'orders:create_order' %}">Make Order</a>
+    <a name="make_order" href="{% url 'orders:make_order' %}">Make Order</a>
 </div>
 {% endblock %}
