--- a/src/base/templates/includes/navbar.html
+++ b/src/base/templates/includes/navbar.html
@@ -3,5 +3,6 @@
     <li><a name="brand" href="{% url 'home' %}">BRAND</a></li>
     <li><a name="home" href="{% url 'home' %}">Home</a></li>
     <li><a name="product_list" href="{% url 'products:list' %}">Products</a></li>
+    <li><a name="cart" href="{% url 'carts:cart' %}">Cart</a></li>
   </ul>
 </nav>
