--- a/src/orders/templates/orders/make_order.html
+++ b/src/orders/templates/orders/make_order.html
@@ -12,7 +12,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button name="make_order" type="submit">Make order</button>
+        <button name="finish_order" type="submit">Finish Order</button>
     </form>
 </div>
 {% endblock %}
