--- a/src/products/templates/products/detail.html
+++ b/src/products/templates/products/detail.html
@@ -1,3 +1,19 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}Product Detail{% endblock %}
-{% block content %}<p>Product detail</p>{% endblock %}
+{% block content %}
+<div>
+    {% if product.image != '' %}
+        <img src="{{ product.image.url }}">
+    {% else %}
+        <img src="{% static 'images/no_image.png' %}">
+    {% endif %}
+    <h3>{{ product.name }}</h3>
+    <h3>{{ product.price }}</h3>
+    {% if product.slug in request.session.cart.products %}
+        <a name="added_to_cart" href="#">Added to cart</a>
+    {% else %}
+        <a name="buy" href="{% url 'carts:cart_add' product.slug %}">Buy</a>
+    {% endif %}
+</div>
+{% endblock %}
