--- a/src/carts/templates/carts/cart.html
+++ b/src/carts/templates/carts/cart.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Cart{% endblock %}
 {% block content %}
-<div>
+<div id="id_product_list">
     {% for product, quantity in cart %}
         <h3>{{ product.name }}, Price: {{ product.price }}, Quantity: {{ quantity }}</h3>
     {% empty %}
