--- a/src/carts/templates/carts/cart.html
+++ b/src/carts/templates/carts/cart.html
@@ -3,8 +3,15 @@
 {% block content %}
 <div id="id_product_list">
     {% for product, quantity in cart %}
-        <h3>{{ product.name }}, Price: {{ product.price }}, Quantity: {{ quantity }} </h3>
-        <a name="remove" href="{% url 'carts:cart_remove' product.slug %}">X</a>
+        <form method="post" action="{% url 'carts:cart_set_quantity' product.slug %}">
+            {% csrf_token %}
+            <h3>
+                {{ product.name }},
+                Price: {{ product.price }},
+                Quantity: <input name="quantity" type="number" value="{{ quantity }}">
+            </h3>
+        </form>
+    <a name="remove" href="{% url 'carts:cart_remove' product.slug %}">X</a>
     {% empty %}
         <h3>You added nothing here yet</h3>
     {% endfor %}
